# lab-chatkit

./: .gitignore
chatkit-python/: .env.example  .gitignore  QUICKSTART.md  README.md  app.py  frontend.py  main.py  requirements.txt  start.sh
openai-chatkit-fasthtml/: .env.example  ADVANCED_EXAMPLES.md  ARCHITECTURE.md  CODE_COMPARISON.md  DEPLOYMENT.md  Dockerfile  FINAL_SUMMARY.txt  MIGRATION_GUIDE.md  Makefile  PROJECT_LOCATION.md  PROJECT_SUMMARY.md  README.md  REFACTORING_SUMMARY.md  STATISTICS.md  docker-compose.yml  docs-index.py  nav.py  pyproject.toml  quickstart.sh  requirements-dev.txt  requirements.txt  run.py
openai-chatkit-fasthtml/.github/workflows/: deploy.yml  tests.yml
openai-chatkit-fasthtml/app/: __init__.py  config.py  main.py  routes.py  session.py
openai-chatkit-fasthtml/app/static/: chatkit.js  styles.css
openai-chatkit-fasthtml/tests/: __init__.py  test_config.py
